[package]
name = "bitcoinrpc"
version = "0.2.0"
authors = ["Aiden McClelland <aiden.k.mcclelland@gmail.com>"]
repository = "https://github.com/jeandudey/rust-bitcoin-rpc"
homepage = "https://github.com/jeandudey/rust-bitcoin-rpc"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "http://docs.rs/bitcoin-rpc/"
description = "Bitcoin Rpc API client for rust."

[dependencies]
failure = "0.1.2"
reqwest = "0.9.3"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = { version = "1.0.32", features = ["arbitrary_precision"] }
uuid = { version = "0.7", features = ["serde", "v4"] }

[features]
ltc = []
doge = []
logging = []