[package]
name = "throttled_bitcoin_rpc"
version = "0.1.2"
authors = ["Aiden McClelland <aiden.k.mcclelland@gmail.com>"]
repository = "https://github.com/DR-BoneZ/throttled-bitcoin-rpc-rs"
homepage = "https://github.com/DR-BoneZ/throttled-bitcoin-rpc-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "http://docs.rs/throttled_bitcoin_rpc/"
description = "Throttled Bitcoin RPC API client for Rust."

[dependencies]
failure = "0.1.2"
reqwest = "0.9.3"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = { version = "1.0.32", features = ["arbitrary_precision"] }
uuid = { version = "0.7", features = ["serde", "v4"] }

[features]
ltc = []
doge = []
logging = []
