[package]
name = "throttled_bitcoin_rpc"
version = "0.2.0"
authors = ["Aiden McClelland <aiden.k.mcclelland@gmail.com>"]
repository = "https://github.com/DR-BoneZ/throttled-bitcoin-rpc-rs"
homepage = "https://github.com/DR-BoneZ/throttled-bitcoin-rpc-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "http://docs.rs/throttled_bitcoin_rpc/"
description = "Throttled Bitcoin RPC API client for Rust."
edition = "2018"

[dependencies]
failure = "0.1.5"
reqwest = "0.9.18"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = { version = "1.0.39", features = ["arbitrary_precision"] }
throttled_json_rpc = "0.0.3"

[features]
ltc = []
doge = []
dash = []
